# vscode-intersystems-iris

./: .gitignore  .vscodeignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
client/: package.json
client/src/: client.ts  extension.ts  irisWebView.ts
client/src/analytics/: analyticsNodeProvider.ts
client/src/interoperability/: interoperabilityNodeProvider.ts
client/src/system-explorer/: systemExplorerNodeProvider.ts
server/: Cargo.toml
server/crates/jsonrpc/src/: lib.rs
server/src/: config.rs  connection.rs  lib.rs  main.rs  server.rs  workspace.rs
server/src/protocol/: capabilities.rs  client.rs  codec.rs  mod.rs  options.rs
